--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,33 @@
-main{
-  width:100%;
-  height:100%;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  flex-direction:column;
+main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-main .top{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  flex-direction:column;
+main .top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-main .top .right{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  flex-direction:row;
+main .top .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
-main .top .right textarea{
+main .top .right textarea {
   width: 300px;
   height: 150px;
   resize: none;
 }
 
-main .bottom{
-  display:flex;
+main .bottom {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-wrap: wrap;
 }
